# Shadcn-Dashboard-ChatBot-Langchain-FastAPI

./: .env.example  .env.local  .gitignore  LICENSE  README.md  env-example.txt
backend/: main.py  pyproject.toml
backend/backend/: whisper_model.py
backend/public/: index.html
backend/public/assets/: index-B6ZnM22x.css  index-DLaACzvP.js  index.js  style.css
frontend/: .prettierrc  bun.lockb  eslint.config.js  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Chat.tsx  RecordButton.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: AudioRTC.ts
frontend/src/routes/: Dashboard.tsx  Profile.tsx
frontend/src/routes/Dashboard/: Dashboard.tsx  columns.tsx  data-table.tsx
