[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jhovadev <jorgearocutipa036@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}
faster-whisper = "^1.0.3"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
